<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewUserActivity">


    <RadioGroup
        android:id="@+id/etSex"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:inputType="textPersonName"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/height_weight"
        app:layout_constraintTop_toBottomOf="@id/tvSex">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_semibold"
            android:text="M"
            android:textColor="@color/gradient_purple" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/raleway_semibold"
            android:text="F"
            android:textColor="@color/gradient_purple" />
    </RadioGroup>

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/camera"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditProfile" />

    <TableLayout
        android:id="@+id/height_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@id/etSex"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvZip">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/raleway_semibold"
                android:gravity="center"
                android:text="@string/tvHeight"
                android:textAlignment="center"
                android:textColor="@color/gradient_purple" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:inputType="numberDecimal"
                android:textColor="@color/gradient_purple" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="30dp"
                android:layout_height="48dp"
                android:fontFamily="@font/raleway_semibold"
                android:gravity="left|center_vertical"
                android:text="in."
                android:textColor="@color/gradient_purple" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/raleway_semibold"
                android:gravity="center"
                android:text="@string/tvWeight"
                android:textAlignment="center"
                android:textColor="@color/gradient_purple"
                tools:layout_constraintEnd_toStartOf="@id/etWeight" />

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:inputType="numberDecimal"
                android:textColor="@color/gradient_purple" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="30dp"
                android:layout_height="48dp"
                android:fontFamily="@font/raleway_semibold"
                android:gravity="left|center_vertical"
                android:text="lbs."
                android:textColor="@color/gradient_purple" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/photoOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/profilePicture"
        app:layout_constraintStart_toEndOf="@+id/profilePicture"
        app:layout_constraintTop_toTopOf="@+id/profilePicture">

        <Button
            android:id="@+id/buttonTakePhoto"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="#76D2E0"
            android:text="Take Photo" />

        <Button
            android:id="@+id/buttonChoosePhoto"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:backgroundTint="#76D2E0"
            android:text="Choose Photo" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:gravity="center"
        android:text="@string/tvEditProfile"
        android:textColor="@color/gradient_purple"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/tvName"
        android:textAlignment="center"
        android:textColor="@color/gradient_purple"
        app:layout_constraintEnd_toStartOf="@+id/etName"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePicture" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:fontFamily="@font/raleway_semibold"
        android:inputType="textPersonName"
        android:maxLength="10"
        android:textColor="@color/gradient_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvZip"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/tvZip"
        android:textAlignment="center"
        android:textColor="@color/gradient_purple"
        app:layout_constraintEnd_toStartOf="@id/etZip"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <EditText
        android:id="@+id/etZip"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:fontFamily="sans-serif-medium"
        android:inputType="numberSigned"
        android:maxLength="5"
        android:textColor="@color/gradient_purple"
        app:layout_constraintEnd_toStartOf="@id/tvDOB"
        app:layout_constraintStart_toEndOf="@+id/tvZip"
        app:layout_constraintTop_toTopOf="@+id/tvZip" />

    <TextView
        android:id="@+id/tvDOB"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/tvAge"
        android:textAlignment="center"
        android:textColor="@color/gradient_purple"
        app:layout_constraintEnd_toStartOf="@+id/etDate"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/etZip"
        app:layout_constraintTop_toTopOf="@+id/tvZip" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:fontFamily="sans-serif-medium"
        android:inputType="date"
        android:textColor="@color/gradient_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDOB"
        app:layout_constraintTop_toTopOf="@+id/etZip" />


    <TextView
        android:id="@+id/tvSex"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/tvSex"
        android:textAlignment="center"
        android:textColor="@color/gradient_purple"
        app:layout_constraintStart_toStartOf="@id/etSex"
        app:layout_constraintTop_toBottomOf="@+id/tvDOB" />

    <Button
        android:id="@+id/buttonSaveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gradient_blue"
        android:text="@string/buttonSaveProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSex"
        app:layout_constraintVertical_bias="0.33" />

</androidx.constraintlayout.widget.ConstraintLayout>